<resources>
    <string name="app_name">hgqw</string>
    <string name="shared_init_name">initconfig</string>
    <string name="update_path_name">updates</string>
    <string name="licence_proved_faile">设备未授权,请联系管理员</string>
    <string name="app_name_new">海港边检勤务综合指挥系统</string>
    <string name="app_name_all">海港边检勤务综合指挥系统</string>
    <string name="quest_quit">确认要退出海港边检勤务综合指挥系统？ </string>
    <string name="unbind_quit">有绑定船舶，是否解除绑定？</string>
    <string name="unbindkakou_quit">有绑定卡口，是否解除绑定？</string>
    <string name="tikoumanager">梯口管理</string>
    <string name="xunchaxunjian">巡查巡检</string>
    <string name="mypolice">我的警务</string>
    <string name="kakoumanager">卡口管理</string>
    <string name="system">系统管理</string>
    <string name="ShipStatus">船舶动态</string>
    <string name="mypolice_empty">当前没有需要处理的警务！</string>
    <string name="mypolice_jwzl_empty">当前没有需要处理的勤务！</string>
    <string name="exception_info">异常信息</string>
    <string name="exception_name">异常对象：</string>
    <string name="exception_checktime">检查时间：</string>
    <string name="accountName">账号：</string>
    <string name="password">密码：</string>
    <string name="no_permission">没有权限！</string>
    <string name="login">登　　录</string>
    <string name="cfzg_login">登　　录</string>
    <string name="login_by_card">刷卡登录</string>
    <string name="duty">执勤人员</string>
    <string name="ok">确定 </string>
    <string name="cancel">取消</string>
    <string name="info">提示 </string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="GPS_no_open">GPS设备未开启，你将无法使用定位功能！ </string>
    <string name="unread_police">未读警务 </string>
    <string name="new_jw">有新警务！ </string>
    <string name="new_qw">有新勤务！ </string>
    <string name="read_police">我的警务 </string>
    <string name="gps_stting_title">GPS上报时间间隔</string>
    <string name="gps_timer">gps_timer</string>
    <string name="server_kadm">server_kadm</string>
    <string name="server_host">server_host</string>
    <string name="server_port">server_port</string>
    <string name="webservice_connect">webservice_connect</string>
    <string name="webservice_namespace">webservice_namespace</string>
    <string name="webservice_username">webservice_username</string>
    <string name="webservice_password">webservice_password</string>
    <string name="webservice_code">webservice_code</string>
    <string name="webservice_arg1">webservice_arg1</string>
    <string name="webservice_arg2">webservice_arg2</string>
    <string name="webservice_arg3">webservice_arg3</string>
    <string name="webservice_arg4">webservice_arg4</string>
    <string name="webservice_arg5">webservice_arg5</string>
    <string name="webservice_url">webservice_url</string>
    <string name="username">username</string>
    <string name="set_5second">5秒钟</string>
    <string name="set_30second">30秒钟</string>
    <string name="set_60second">1分钟</string>
    <string name="set_300second">5分钟</string>
    <string name="set_600second">10分钟</string>
    <string name="set_1800second">30分钟</string>
    <string name="set_3600second">1小时</string>
    <string name="changepassword">修改密码 </string>
    <string name="network_setting">网络设置 </string>
    <string name="waiting">请稍后 </string>
    <string name="logouting">注销中 </string>
    <string name="logout_failure">注销失败，请稍后再试！ </string>
    <string name="select_ship">查询船舶</string>
    <string name="select_kakou">查询卡口</string>
    <string name="select_person">查询人员</string>
    <string name="bindShip">船舶绑定</string>
    <string name="paycard">刷卡登记</string>
    <string name="unbindShip">船舶解绑</string>
    <string name="quickCheck">快速验放</string>
    <string name="normalxunjian">日常巡检</string>
    <string name="bindPlace">地点绑定</string>
    <string name="unbindPlace">地点解绑</string>
    <string name="chagangchashao">查岗查哨</string>
    <string name="clyf">车辆验放</string>
    <string name="clxj">车辆巡检</string>
    <string name="gpsset">GPS设置</string>
    <string name="dictionarysync">字典同步</string>
    <string name="baseinfomaintenance">数据采集</string>
    <string name="inspectPlace">巡检地点</string>
    <string name="talkbackstr">语音对讲</string>
    <string name="swupdate">软件升级</string>
    <string name="update_apk_url">/hgqw/activex/pda/update.xml</string>
    <string name="current_is_latest_version">当前版本已是最新版本，无需更新</string>
    <string name="UpdateInfo">发现新版本: V%1$s</string>
    <string name="UpdateInfo_Title">升级提示:</string>
    <string name="UpdateInfo_Downloading">正在下载:</string>
    <string name="switchuser">切换用户</string>
    <string name="leave">船舶离港</string>
    <string name="ship_out">船舶移泊</string>
    <string name="arrive">船舶抵港</string>
    <string name="ship_in">船舶靠泊</string>
    <string name="logout">注销 </string>
    <string name="ip">IP地址</string>
    <string name="host">域名</string>
    <string name="currentuser">当前用户：</string>
    <string name="currentserveraddr">当前地址：</string>
    <string name="usernameempty">账号不能为空</string>
    <string name="passwordempty">密码不能为空</string>
    <string name="cardnumempty">卡号不能为空</string>
    <string name="logining">登录中</string>
    <string name="login_failure">登录失败，请确认账号及密码是否正确，网络是否已连接！</string>
    <string name="data_download_failure_info">网络连接失败，请稍后再试</string>
    <string name="retry">重试</string>
    <string name="readInfoLabelData">请读取信息钉数据：</string>
    <string name="readInfoLabelDataBy_baseinfo">请读取电子标签数据：</string>
    <string name="readCardData">请读取人员证件数据：</string>
    <string name="iccardnum">电子标签：</string>
    <string name="idcardnum">证件号码：</string>
    <string name="iccard">IC卡</string>
    <string name="idcard">居民身份证</string>
    <string name="sending">发送中</string>
    <string name="send_failure">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="save_failure">保存失败</string>
    <string name="save_success">保存成功</string>
    <string name="reader_initcomm_failure">第二代身份证阅读器打开失败</string>
    <string name="Valid_results">验证结果：</string>
    <string name="Valid_results_fbfzj">验证结果：验证失败，不是边防证件</string>
    <string name="Traffic_direction">通行方向：</string>
    <string name="Traffic_direction_tag">通行方向</string>
    <string name="Traffic_direction_kk">进出卡口方向：</string>
    <string name="Exception_regist">记录异常</string>
    <string name="save_cgcs">保存记录</string>
    <string name="Validing">验证中</string>
    <string name="name">姓　　名</string>
    <string name="name_s">姓　　名：</string>
    <string name="country">国　　籍</string>
    <string name="country_s">国　　籍：</string>
    <string name="minzu_s">民　　族：</string>
    <string name="cardtype">证件种类</string>
    <string name="cardtype_s">证件种类：</string>
    <string name="cardtype1_s">证件类型：</string>
    <string name="unit">所属单位</string>
    <string name="unit_s">所属单位：</string>
    <string name="sex">性　　别</string>
    <string name="sex_s">性　　别：</string>
    <string name="office">职　　务</string>
    <string name="btpzmbly">碰撞信息>></string>
    <string name="title_bjtsxx">报警提示信息>></string>
    <string name="pzbj_message">已经被设定为报警提示人员！</string>
    <string name="office_s">职　　务：</string>
    <string name="work_s">职　　业：</string>
    <string name="zqdd">执勤地点</string>
    <string name="cardnum">证件号码</string>
    <string name="cardnum_s">证件号码：</string>
    <string name="yxq">有效期限：</string>
    <string name="tx_time">通行时间：</string>
    <string name="tx_time_tag">通行时间</string>
    <string name="tx_address">通行地点：</string>
    <string name="tx_address_tag">通行地点</string>
    <string name="cardnum_empty">号码不能为空！</string>
    <string name="shipname">船舶名称：</string>
    <string name="ship_gj">船港籍：</string>
    <string name="ship_zzdw">载重吨位：</string>
    <string name="ship_ml">马力：</string>
    <string name="ship_yt">用途：</string>
    <string name="ship_dkcb">搭靠船舶(范围)：</string>
    <string name="boweiname">泊　　位：</string>
    <string name="matouname">码　　头：</string>
    <string name="quyuname">区　　域：</string>
    <string name="sel_person_name">姓　　名：</string>
    <string name="sel_person_sex">性　　别：</string>
    <string name="sel_person_office">职　　务：</string>
    <string name="sel_person_cardtype">证件种类：</string>
    <string name="no_web_info">说明：离线状态查询范围为所有船员</string>
    <string name="sel_person_range">查询范围：</string>
    <string name="goods_check_unit">所属单位：</string>
    <string name="selectship">选择船舶</string>
    <string name="shipproperty">船舶性质</string>
    <string name="select">查询</string>
    <string name="slotcard">刷卡</string>
    <string name="unbind">解绑</string>
    <string name="shipinfo">船舶信息</string>
    <string name="kakouinfo">卡口信息</string>
    <string name="readcard_cljc_kakou">车辆检测</string>
    <string name="shipchinaname">船舶中文名</string>
    <string name="shipenglishname">船舶英文名</string>
    <string name="shipcheckclass">检查分类</string>
    <string name="shipcheckstatus">检查状态</string>
    <string name="shipcompany">船代公司：</string>
    <string name="shipcountry">船舶国籍</string>
    <string name="shippeoplenumber">船员数</string>
    <string name="shippeopleloginnumber">登陆船员数</string>
    <string name="shipcustomnumber">登轮人员数</string>
    <string name="shippos">停靠位置：</string>
    <string name="yjsj">预检时间</string>
    <string name="zjsj">正检时间</string>
    <string name="jqlb">警情类别</string>
    <string name="fbr">发布人</string>
    <string name="fbsj">发布时间</string>
    <string name="cjfzr">处警负责人</string>
    <string name="xtry">协同人员</string>
    <string name="pzr">批准人</string>
    <string name="zlnr">指令内容</string>
    <string name="qianshou">签收</string>
    <string name="yiqianshou">已签收</string>
    <string name="canceled">已取消</string>
    <string name="qianshou_success">签收成功</string>
    <string name="qianshou_failure_already_cancel">签收失败，指令已取消。</string>
    <string name="qianshou_failure">签收失败</string>
    <string name="save">保存</string>
    <string name="re_download">重新下载</string>
    <string name="policedetail">警务详细信息</string>
    <string name="feedback_content_empty">反馈内容不能为空！</string>
    <string name="sequence">序号</string>
    <string name="operate">操作</string>
    <string name="detail">详情</string>
    <string name="feedback">反馈</string>
    <string name="no_bindship">没有绑定船舶，请先执行船舶绑定！</string>
    <string name="no_bindplace">没有绑定地点，请先执行地点绑定！</string>
    <string name="no_ship_place">请先绑定船舶或地点！</string>
    <string name="clxj_bind_qyxx_first">车辆巡检请先绑定区域！</string>
    <string name="sb_no_ship_place">请先在梯口管理中绑定船舶！</string>
    <string name="xc_no_bindplace">请先在巡查巡检中绑定船舶！</string>
    <string name="no_bindkakou">没有绑定卡口，请先执行卡口绑定！</string>
    <string name="already_bindship">已经绑定船舶，请先执行船舶解绑！</string>
    <string name="already_bindplace">已经绑定地点，请先执行地点解绑！</string>
    <string name="goodscheck_ship">船舶 ：</string>
    <string name="downup_ship">上下船舶 ：</string>
    <string name="goodscheck_up_ship">上轮 </string>
    <string name="goodscheck_down_ship">下轮</string>
    <string name="bindship_success">绑定成功！</string>
    <string name="bindship_failure">绑定失败！</string>
    <string name="had_bind_ship">当前模式下已绑定船舶！</string>
    <string name="unbindship_success">解除绑定成功！</string>
    <string name="unbindship_failure">解除绑定失败！</string>
    <string name="unbindship_failure_no_ship">船舶已解绑或不存在！</string>
    <string name="modify_success">修改成功！</string>
    <string name="modify_failure">修改失败！</string>
    <string name="select_result">查询结果</string>
    <string name="select_success">查询成功！</string>
    <string name="select_failure">查询失败！</string>
    <string name="yxqx">有效期限</string>
    <string name="bhcyx">本航次有效</string>
    <string name="event_desc_empty">事件描述不能为空！</string>
    <string name="birthday">出生日期</string>
    <string name="isfeedback">是否反馈：</string>
    <string name="feedbackcontent">反馈内容：</string>
    <string name="inputfeedbackcontent">请输入反馈内容</string>
    <string name="record_goods">记录物品 </string>
    <string name="xunjian_sdcb">所登范围</string>
    <string name="xunjian_person_pzxx">碰撞信息>></string>
    <string name="cardinfo">证件信息</string>
    <string name="cardphoto">证件照片：</string>
    <string name="modifypassdict">修改通行方向</string>
    <string name="manualinput">返　　回</string>
</resources>