<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainmenu_bg_v"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <TextView
                android:id="@+id/Validation_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Valid_results"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/Traffic_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Traffic_direction"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView_Traffic_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip" >
                </ImageView>
            </LinearLayout>

            <TextView
                android:id="@+id/cardtypetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardinfo"
                android:textColor="@color/TitleInfoTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="3dip"
            android:background="@drawable/bigsepline" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/sex"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/birthday"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_cardtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/cardtype"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_cardnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/cardnum"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_yxqz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/yxqx"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sdcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/xunjian_sdcb"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/office"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_btpzmbly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/btpzmbly"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_pzmbly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/btpzmbly"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_pzxx_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:text="@string/xunjian_person_pzxx"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_pzxx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_cardphoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cardphoto"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_toRightOf="@+id/detail_cardphoto"
                    android:scaleType="centerInside"
                    android:src="@drawable/photo" >
                </ImageView>

                <ImageView
                    android:id="@+id/imageView_network_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_toRightOf="@+id/detail_cardphoto"
                    android:scaleType="centerInside" >
                </ImageView>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="3dip"
            android:background="@drawable/bigsepline" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <Button
                    android:id="@+id/btnExceptionRegist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_common"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/Exception_regist"
                    android:textColor="@drawable/btn_textcolor"
                    android:textSize="13sp" >
                </Button>

                <Button
                    android:id="@+id/btnNoIDCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dip"
                    android:background="@drawable/btn_common"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/manualinput"
                    android:textColor="@drawable/btn_textcolor"
                    android:textSize="13sp" >
                </Button>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <Button
                    android:id="@+id/btnmodifyPassDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_common"
                    android:text="@string/modifypassdict"
                    android:textColor="@drawable/btn_textcolor"
                    android:textSize="12sp" >
                </Button>

                <Button
                    android:id="@+id/btnRecordGoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_common"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/record_goods"
                    android:textColor="@drawable/btn_textcolor"
                    android:textSize="13sp"
                    android:visibility="visible" >
                </Button>

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_common"
                    android:onClick="zxingScanMethod"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:text="@string/wpjc_erweimasaomiao"
                    android:textColor="@drawable/btn_textcolor"
                    android:textSize="13sp"
                    android:visibility="gone" >
                </Button>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>